Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,12 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "palermo = neighborhoods[0]\n",
-    "palmero"
+    "palermo = neighborhoods[0]\n"
    ]
   },
   {
