--- a/index.ipynb
+++ b/index.ipynb
@@ -62,11 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "palermo = neighborhoods[0]\n"
+    "palermo = neighborhoods[0]\n",
+    "palmero\n"
    ]
   },
   {
