--- a/index.ipynb
+++ b/index.ipynb
@@ -62,12 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "palmero\n"
+    "palmero =\n"
    ]
   },
   {
