Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "palmero = neighborhoods \n"
+    "palmero = neighborhoods [0]\n"
    ]
   },
   {
