--- a/index.ipynb
+++ b/index.ipynb
@@ -62,11 +62,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-13-cc66bb889988>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-cc66bb889988>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    palmero = neighborhoods [0]palmero\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "palmero = neighborhoods [0]\n"
+    "palmero = neighborhoods [0]palmero\n",
+    "\n"
    ]
   },
   {
