--- a/index.ipynb
+++ b/index.ipynb
@@ -91,11 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = None"
+    "la_boca = nei"
    ]
   },
   {
