--- a/index.ipynb
+++ b/index.ipynb
@@ -91,11 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = neighborhoods [-1]"
+    "la_boca = neighborhoods [-1]\n",
+    "la_b"
    ]
   },
   {
