--- a/index.ipynb
+++ b/index.ipynb
@@ -91,12 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'La Boca'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "la_boca = neighborhoods [-1]\n",
-    "la_b"
+    "la_boca"
    ]
   },
   {
