--- a/index.ipynb
+++ b/index.ipynb
@@ -135,11 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = None"
+    "ba_latitude = coo"
    ]
   },
   {
