--- a/index.ipynb
+++ b/index.ipynb
@@ -156,11 +156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = None"
+    "ba_longitude = coordinates[1]"
    ]
   },
   {
