Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,11 +156,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = coordinates[1]"
+    "ba_longitude = coordinates[1]\n",
+    "ba_"
    ]
   },
   {
