--- a/index.ipynb
+++ b/index.ipynb
@@ -156,12 +156,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-58.3816"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ba_longitude = coordinates[1]\n",
-    "ba_"
+    "ba_longitude"
    ]
   },
   {
