--- a/index.ipynb
+++ b/index.ipynb
@@ -279,11 +279,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7fb7a90fb6d8>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "buenos_marker = folium.Marker([ba_latitude, ba_longitude])\n",
     "buenos_marker.add_to(buenos_map)"
