--- a/index.ipynb
+++ b/index.ipynb
@@ -426,7 +426,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = None"
+    "la_boca_marker = marker"
    ]
   },
   {
