--- a/index.ipynb
+++ b/index.ipynb
@@ -422,11 +422,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = marker_six"
+    "la_boca_marker = marker_six\n",
+    "la_boc"
    ]
   },
   {
