Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -422,12 +422,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7fb7a90f1f28>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "la_boca_marker = marker_six\n",
-    "la_boc"
+    "la_boca_marker"
    ]
   },
   {
