--- a/index.ipynb
+++ b/index.ipynb
@@ -483,18 +483,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7fb7a90f1f28>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "neighborhood_markers.pop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(neighborhood_markers)) # 5\n",
     "print(neighborhood_markers[-1] == marker_five) # True"
